2005-04-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (ExpandXotcl): allow for xotcl method name expansion,
	if you change ::tkcon::OPT(expandorder) to include Xotcl before
	Procname

2005-02-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::send::send): propagate -displayof to winfo interps
	call. [Bug 1124369] (mbec)

2004-11-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::ExpandVariable): correct array keyname
	expansion. [Bug 1004508] (bold)

2004-11-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::EvalSocket): pass sock arg. (allaert)

2004-11-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::DeleteTab): allow for exit code to be passed
	when exit is aliased to DeleteTab. [Bug 1064462]
	(::tkcon::Expect): graphicsSet isn't valid yet

2004-10-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::Highlight): use ctext for the 'edit' dialog
	if available

2004-07-26  Jeff Hobbs  <jeffh@ActiveState.com>

	**** TKCON 2.4 TAGGED FOR RELEASE ****

	* index.html, docs/*.html: remove email links, update 2.4 info
	* docs/plugin.html: update plugin page embed code

2004-06-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (DeleteTab, Destroy): improve the 'exit' handling so
	that 'exit' in the first created tab doesn't do a full exit.
	'exit' in the last tab of the first created console still exits
	tkcon, fixing that requires a rearch of the console
	creation/management.
	(InitTab): Have the <Configure> binding only fire for the root
	window, not for each tab.
	(GotoTab): Keep tabs around - just raise/lower instead of grid
	remove/add.  break on Next/Prev Tab binding to get focus right.
	(Prompt): return if console w doesn't exist

2004-06-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: add [X] tab delete button and Console -> Delete Tab
	menu item. [Bug 970785]

2004-05-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (observe): allow observe of 'proc'
