@@ -1,3 +1,8 @@
+2005-05-25  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (InitMenus): add ActiveTcl Help menu item, if AT Help
+	is found.
+
 2005-04-06  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (ExpandXotcl): allow for xotcl method name expansion,
